--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>英雄联盟</title>
     <style>
       img {
-        max-width: 1<div;
+        max-width: 100%;
       }
     </style>
   </head>
   <body>
-    <h1>英雄联盟</h1>
+    <nav>
+      <ul>
+        <li><a href="#lol">游戏简介</a></li>
+        <li><a href="#events">重要事件</a></li>
+        <li><a href="#type">英雄类型</a></li>
+        <li><a href="#record">得奖记录</a></li>
+        <li><a href="#enjoy">美图欣赏</a></li>
+        <li><a href="#reward">回响</a></li>
+      </ul>
+    </nav>
+    <h1 id="lol">英雄联盟</h1>
     <p>
       《英雄联盟》（英语：League of Legends，简称LoL）是由Riot
       Games开发及发行的一款多人在线战术擂台（MOBA）游戏，游戏为免费模式进行并提供付费道具服务。该游戏是受到《魔兽争霸III：冰封王座》中一个名为DotA第三方自定义地图启发而诞生，且至今仍不断定期更新。
@@ -32,7 +42,7 @@
       </li>
     </ul>
 
-    <h2>英雄类型</h2>
+    <h2 id="type">英雄类型</h2>
     <ol>
       <li>
         射手（Marksman）：射手俗称ADC或AD，是主要造成远程物理伤害的英雄，这些英雄有较高的每秒伤害（DPS）而不是爆发能力，他们通常是破坏防御塔的主力，不过他们的防御力偏低，容易遭到火力瞄准。
@@ -54,7 +64,7 @@
       </li>
     </ol>
 
-    <h2>得奖记录</h2>
+    <h2 id="record">得奖记录</h2>
     <table>
       <thead>
         <tr>
@@ -89,13 +99,13 @@
         </tr>
       </tbody>
     </table>
-    <h2>生活照</h2>
+    <h2 id="enjoy">美图欣赏</h2>
 
     <div><img width="400" src="iamge/1.jpeg" alt="图1" /></div>
     <div><img width="400" src="iamge/6.jpg" alt="图2" /></div>
     <div><img width="400" src="iamge/7.png" alt="图3" /></div>
 
-    <h2>回响</h2>
+    <h2 id="reward">回响</h2>
     <p>
       英雄联盟在西方主流媒体的评论都倾向得到正面评价。在Metacritic上，在100分的满分里取得78分。
     </p>
