--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+      ,
+      minimum-scale="1.0"
+      ,
+      maximum-scale="1.0"
+      ,
+      user-scalable="no"
+    />
     <title>英雄联盟</title>
     <style>
       img {
@@ -101,9 +110,21 @@
     </table>
     <h2 id="enjoy">美图欣赏</h2>
 
-    <div><img width="400" src="iamge/1.jpeg" alt="图1" /></div>
-    <div><img width="400" src="iamge/6.jpg" alt="图2" /></div>
-    <div><img width="400" src="iamge/7.png" alt="图3" /></div>
+    <div>
+      <a href="iamge/1.jpeg" target="_blank"
+        ><img width="400" src="iamge/1.jpeg" alt="图1"
+      /></a>
+    </div>
+    <div>
+      <a href="iamge/6.jpg" target="_blank"
+        ><img width="400" src="iamge/6.jpg" alt="图2"
+      /></a>
+    </div>
+    <div>
+      <a href="iamge/7.png" target="_blank"
+        ><img width="400" src="iamge/7.png" alt="图3"
+      /></a>
+    </div>
 
     <h2 id="reward">回响</h2>
     <p>
